<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <Button
        android:id="@+id/button12"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/retangulo_branco_com_sombra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="83dp" />

    <Button
        android:id="@+id/btn_receitas"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/botao_customizado_neutro"
        android:fontFamily="@font/salsa"
        android:text="@string/btn_receitas"
        android:textAllCaps="false"
        android:textColor="@color/preto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ola_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/salsa"
        android:text="@string/ola_nome"
        android:textColor="@color/preto"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="58dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_customizado_neutro"
        android:fontFamily="@font/salsa"
        android:text="@string/btn_custo_fixo"
        android:textAllCaps="false"
        android:textColor="@color/preto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_novo_ingrediente" />

    <Button
        android:id="@+id/btn_nova_receita"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_customizado_neutro"
        android:fontFamily="@font/salsa"
        android:text="@string/btn_nova_receita"
        android:textAllCaps="false"
        android:textColor="@color/preto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_receitas" />

    <TextView
        android:id="@+id/legenda_nome_receita"
        android:layout_width="106dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:text="@string/nome_receita"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        tools:layout_editor_absoluteX="72dp" />

    <Button
        android:id="@+id/btn_novo_ingrediente"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_customizado_neutro"
        android:fontFamily="@font/salsa"
        android:text="@string/btn_novo_ingrediente"
        android:textAllCaps="false"
        android:textColor="@color/preto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nova_receita" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toEndOf="@+id/ola_nome"
        app:srcCompat="@drawable/img_bolas_coloridas_pequeno"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>