<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".splach_vamosla">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <TextView
            android:id="@+id/titulo_chamada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salsa"
            android:text="@string/titulo_chamada"
            android:textColor="@color/verde"
            android:textSize="36sp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />

        <TextView
            android:id="@+id/texto_chamada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/texto_chamada"
            android:textColor="@color/preto"
            android:textSize="20sp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/titulo_chamada"
            app:layout_constraintVertical_bias="0.021" />

        <Button
            android:id="@+id/btn_comecar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/botao_customizado_rosa"
            android:backgroundTint="@color/branco"
            android:fontFamily="@font/salsa"
            android:text="@string/texto_btn_chamada"
            android:textAllCaps="false"
            android:textColor="@color/branco"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>